# search_query_dsl

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
src/search_query_dsl/: __init__.py  api.py
src/search_query_dsl/backends/: __init__.py
src/search_query_dsl/backends/memory/: __init__.py  backend.py  base.py  resolver.py
src/search_query_dsl/backends/memory/operators/: __init__.py  fts.py  geometry.py  jsonb.py  null.py  set.py  standard.py  string.py
src/search_query_dsl/backends/sqlalchemy/: __init__.py  backend.py  base.py  context.py  utils.py
src/search_query_dsl/backends/sqlalchemy/operators/: __init__.py  fts.py  geometry.py  jsonb.py  null.py  set.py  standard.py  string.py
src/search_query_dsl/contrib/: django.py  fastapi.py
src/search_query_dsl/core/: __init__.py  builder.py  exceptions.py  hooks.py  models.py  operators.py  utils.py  validator.py
tests/: __init__.py  test_builder.py  test_exceptions.py  test_memory_evaluator.py  test_models.py  test_pagination_ordering.py  test_sqlalchemy_backend.py
